force-app/main/default/objects/Alumni_Conversation__c/Alumni_Conversation__c.object-meta.xml
<CustomObject>
    <label>Alumni Conversation</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Alumni Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>