force-app/main/default/objects/Alumni_Conversation__c/fields/Alumni_Message__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Message__c</fullName>
    <label>Alumni Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>