force-app/main/default/objects/Alumni_Conversation__c/fields/Alumni_Name__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Name__c</fullName>
    <label>Alumni Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>