force-app/main/default/objects/Alumni_Conversation__c/fields/Degree_Stream__c.field-meta.xml
<CustomField>
    <fullName>Degree_Stream__c</fullName>
    <label>Degree &amp; Stream</label>
    <length>255</length>
    <type>Text</type>
</CustomField>